
# ===================================================================
# インクルードパスの設定
# ===================================================================
include_directories (
  ${PROJECT_SOURCE_DIR}/include/types
  ${PROJECT_SOURCE_DIR}/include/dtpg
  ${PROJECT_SOURCE_DIR}/include/fsim
  ${PROJECT_SOURCE_DIR}/include/reducer
  ${PROJECT_SOURCE_DIR}/include/condgen
  include
  )


# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory( gtest )
add_subdirectory( test-programs )


# ===================================================================
#  ソースファイルの設定
# ===================================================================

set ( condgen_SOURCES
  CondGenMgr.cc
  CondGen.cc
  #CondGen2.cc
  CnfGenMgr.cc
  CnfGen.cc
  CnfGenNaive.cc
  #CnfGenCover.cc
  CnfGenFactor.cc
  CnfGenAig.cc
  Expr2Aig.cc
  #Expr2Cnf.cc
  )


# ===================================================================
# ターゲットの設定
# ===================================================================
ym_add_object_library ( druid_condgen
  ${condgen_SOURCES}
  )


# ===================================================================
#  テストの設定
# ===================================================================


# ===================================================================
#  インストールターゲットの設定
# ===================================================================
