
# ===================================================================
# インクルードパスの設定
# ===================================================================
include_directories (
  include
  )


# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory( driver )
add_subdirectory( engine )
add_subdirectory( ex )
add_subdirectory( jt )
add_subdirectory( gtest )
add_subdirectory( test-programs )


# ===================================================================
#  ソースファイルの設定
# ===================================================================

set ( mgr_SOURCES
  dtpg_mgr/DtpgMgr.cc
  )


# ===================================================================
# ターゲットの設定
# ===================================================================
ym_add_object_library ( druid_dtpg
  ${mgr_SOURCES}
  ${driver_SOURCES}
  ${engine_SOURCES}
  ${ex_SOURCES}
  ${jt_SOURCES}
  )


# ===================================================================
#  テストの設定
# ===================================================================


# ===================================================================
#  インストールターゲットの設定
# ===================================================================
