
# ===================================================================
# インクルードパスの設定
# ===================================================================
include_directories (
  ${CMAKE_CURRENT_SOURCE_DIR}
  )

# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory( impl_naive )
add_subdirectory( impl_multi )

add_subdirectory( gtest )
add_subdirectory( test-programs )


# ===================================================================
#  ソースファイルの設定
# ===================================================================


# ===================================================================
# ターゲットの設定
# ===================================================================

ym_add_object_library ( druid_fsim
  Fsim.cc
  Fsim_naive.cc
  Fsim_multi.cc
  )


# ===================================================================
#  テストの設定
# ===================================================================


# ===================================================================
#  インストールターゲットの設定
# ===================================================================
