
# ===================================================================
# インクルードパスの設定
# ===================================================================
include_directories (
  include
  )


# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory( analyzer )
add_subdirectory( gtest )
add_subdirectory( test-programs )


# ===================================================================
#  ソースファイルの設定
# ===================================================================

set ( minpat_SOURCES
  MinPat.cc
  MpInit.cc
  MpReduce.cc
  MpComp.cc
  MpCompImpl.cc
  MpComp_MinCov.cc
  MpComp_Expand.cc
  MpComp_Pack.cc
  MpComp_Simple.cc
  MpComp_Merge.cc
  MpAnalyze.cc
  MpVerify.cc
  )


# ===================================================================
# ターゲットの設定
# ===================================================================
ym_add_object_library ( druid_minpat
  ${minpat_SOURCES}
  ${minpat_analyzer_SOURCES}
  )


# ===================================================================
#  テストの設定
# ===================================================================


# ===================================================================
#  インストールターゲットの設定
# ===================================================================
