
# ===================================================================
# インクルードパスの設定
# ===================================================================
include_directories(
  ${GTEST_INCLUDE_DIR}
  )


# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory( types )
add_subdirectory( dtpg )


# ===================================================================
# テストターゲットの定義
# ===================================================================
