
# ===================================================================
# インクルードパスの設定
# ===================================================================
include_directories(
  )


# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory ( tpgnetworktest )
add_subdirectory ( read_blif )
add_subdirectory ( read_iscas89 )
#add_subdirectory ( dtpgtest )
add_subdirectory ( fsimtest )
add_subdirectory ( classify )


# ===================================================================
#  ソースファイルの設定
# ===================================================================
