
# ===================================================================
# インクルードパスの設定
# ===================================================================
include_directories(
  )


# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory ( classify )


# ===================================================================
#  ソースファイルの設定
# ===================================================================
