
# ===================================================================
# インクルードパスの設定
# ===================================================================
include_directories(
  ../
  )


# ===================================================================
# サブディレクトリの設定
# ===================================================================

#add_subdirectory ( testcube_gen )
add_subdirectory ( condgen )


# ===================================================================
#  ソースファイルの設定
# ===================================================================
