
# ===================================================================
# インクルードパスの設定
# ===================================================================
include_directories(
  ../
  )


# ===================================================================
# サブディレクトリの設定
# ===================================================================

#add_subdirectory ( testcube_gen )
#add_subdirectory ( condgen )
add_subdirectory ( count_test )
add_subdirectory ( cnfgen )


# ===================================================================
#  ソースファイルの設定
# ===================================================================
