
# ===================================================================
# インクルードパスの設定
# ===================================================================
include_directories (
  .
  )


# ===================================================================
# サブディレクトリの設定
# ===================================================================

add_subdirectory( gtest )


# ===================================================================
#  ソースファイルの設定
# ===================================================================

set ( engine_SOURCES
  ${CMAKE_CURRENT_SOURCE_DIR}/GateEnc.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/StructEngine.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/BoolDiffEnc.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/FFREnc.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/MFFCEnc.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/FaultEnc.cc
  PARENT_SCOPE
  )


# ===================================================================
# ターゲットの設定
# ===================================================================


# ===================================================================
#  テストの設定
# ===================================================================


# ===================================================================
#  インストールターゲットの設定
# ===================================================================
